<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/Mauve_Taupe"
    android:orientation="vertical">

    <TextView
        android:id="@+id/id_tv_input"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:background="@color/Pale_Peach"
        android:textColor="@color/Dark_Purple"
        android:textSize="48sp"
        android:gravity="right | bottom"
        android:padding="10dp"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1">
        
        <Button
            android:id="@+id/btn7"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="7"
            android:onClick="onDigit"
            android:layout_weight="1"
            android:backgroundTint="@color/Raisin_Black"
            android:textColor="@color/Pale_Peach"
            android:layout_margin="2dp"
            />
        <Button
            android:id="@+id/btn8"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="8"
            android:onClick="onDigit"
            android:layout_weight="1"
            android:backgroundTint="@color/Raisin_Black"
            android:textColor="@color/Pale_Peach"
            android:layout_margin="2dp"
            />
        <Button
            android:id="@+id/btn9"
            android:layout_width="0dp"
            android:onClick="onDigit"
            android:layout_height="match_parent"
            android:text="9"
            android:layout_weight="1"
            android:backgroundTint="@color/Raisin_Black"
            android:textColor="@color/Pale_Peach"
            android:layout_margin="2dp"
            />
        <Button
            android:id="@+id/btnDivide"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="/"
            android:onClick="onOperator"
            android:layout_weight="1"
            android:backgroundTint="@color/Raisin_Black"
            android:textColor="@color/Pale_Peach"
            android:layout_margin="2dp"
            />

        
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1">

        <Button
            android:id="@+id/btn4"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/four"
            android:onClick="onDigit"
            android:layout_weight="1"
            android:backgroundTint="@color/Raisin_Black"
            android:textColor="@color/Pale_Peach"
            android:layout_margin="2dp"
            />
        <Button
            android:id="@+id/btn5"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="5"
            android:onClick="onDigit"
            android:layout_weight="1"
            android:backgroundTint="@color/Raisin_Black"
            android:textColor="@color/Pale_Peach"
            android:layout_margin="2dp"
            />
        <Button
            android:id="@+id/btn6"
            android:layout_width="0dp"
            android:onClick="onDigit"
            android:layout_height="match_parent"
            android:text="@string/six"
            android:layout_weight="1"
            android:backgroundTint="@color/Raisin_Black"
            android:textColor="@color/Pale_Peach"
            android:layout_margin="2dp"
            />
        <Button
            android:id="@+id/btnMultiply"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/Multiply"
            android:onClick="onOperator"
            android:layout_weight="1"
            android:backgroundTint="@color/Raisin_Black"
            android:textColor="@color/Pale_Peach"
            android:layout_margin="2dp"
            />


    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1">

        <Button
            android:id="@+id/btn1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/one"
            android:onClick="onDigit"
            android:layout_weight="1"
            android:backgroundTint="@color/Raisin_Black"
            android:textColor="@color/Pale_Peach"
            android:layout_margin="2dp"
            />
        <Button
            android:id="@+id/btn2"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/two"
            android:onClick="onDigit"
            android:layout_weight="1"
            android:backgroundTint="@color/Raisin_Black"
            android:textColor="@color/Pale_Peach"
            android:layout_margin="2dp"
            />
        <Button
            android:id="@+id/btn3"
            android:layout_width="0dp"
            android:onClick="onDigit"
            android:layout_height="match_parent"
            android:text="@string/three"
            android:layout_weight="1"
            android:backgroundTint="@color/Raisin_Black"
            android:textColor="@color/Pale_Peach"
            android:layout_margin="2dp"
            />
        <Button
            android:id="@+id/btnSubtract"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/Minus"
            android:onClick="onOperator"
            android:layout_weight="1"
            android:backgroundTint="@color/Raisin_Black"
            android:textColor="@color/Pale_Peach"
            android:layout_margin="2dp"
            />


    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1">

        <Button
            android:id="@+id/btn0"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/ZEro"
            android:onClick="onDigit"
            android:layout_weight="1"
            android:backgroundTint="@color/Raisin_Black"
            android:textColor="@color/Pale_Peach"
            android:layout_margin="2dp"
            />

        <Button
            android:id="@+id/btnDot"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/dot"
            android:onClick="onDecimalPoint"
            android:layout_weight="1"
            android:backgroundTint="@color/Raisin_Black"
            android:textColor="@color/Pale_Peach"
            android:layout_margin="2dp"
            />
        <Button
            android:id="@+id/btnCLR"
            android:layout_width="0dp"
            android:onClick="onClear"
            android:layout_height="match_parent"
            android:text="@string/clear"
            android:layout_weight="1"
            android:backgroundTint="@color/Raisin_Black"
            android:textColor="@color/Pale_Peach"
            android:layout_margin="2dp"
            />
        <Button
            android:id="@+id/btnAdd"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/Add"
            android:onClick="onOperator"
            android:layout_weight="1"
            android:backgroundTint="@color/Raisin_Black"
            android:textColor="@color/Pale_Peach"
            android:layout_margin="2dp"
            />


    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1">

        <Button
            android:id="@+id/btnEquals"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/equals"
            android:onClick="onEqual"
            android:layout_weight="2"
            android:backgroundTint="@color/Raisin_Black"
            android:textColor="@color/Pale_Peach"
            android:layout_margin="2dp"
            />
    </LinearLayout>
</LinearLayout>